# matrix-calculator

./: README.md  build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  matrix-operations.cpp
app/src/main/java/com/example/matrixcalculator/: GradientText.kt  MainActivity.kt
app/src/main/java/com/example/matrixcalculator/ui/theme/: Theme.kt  Type.kt
gradle/wrapper/: gradle-wrapper.properties
